--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "menu-no-logo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alexandrvinogradov.github.io/NoLogoStydio-test-task",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   }
 }
